[package]
name = "aerowan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aerowan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
iroh = "0.96.1"
iroh-blobs = "0.98.0"
iroh-docs = "0.96.0"
iroh-gossip = "0.96.0"
iroh-metrics = "0.38.2"
iroh-ping = "0.8.0"
iroh-tickets = "0.3.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
reticulum = "0.1.0"
network-interface = "2"
hex = "0.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
dirs = "6.0.0"
toml = "1.0.3"
log = "0.4.29"
env_logger = "0.11.9"
rand = "0.8.5"
axum = "0.8.8"

